content/_generated-doc/3.20/config/quarkus-flyway.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-flyway_quarkus-flyway-enabled]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-enabled[`quarkus.flyway.enabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Whether Flyway is enabled *during the build*.

If Flyway is disabled, the Flyway beans won't be created and Flyway won't be usable.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

h|[[quarkus-flyway_section_quarkus-flyway]] [.section-name.section-level0]##link:#quarkus-flyway_section_quarkus-flyway[Datasources]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-flyway_quarkus-flyway-locations]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-locations[`quarkus.flyway.locations`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.locations+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".locations`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".locations+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Comma-separated list of locations to scan recursively for migrations. The location type is determined by its prefix.

Unprefixed locations or locations starting with classpath: point to a package on the classpath and may contain both SQL and Java-based migrations.

Locations starting with filesystem: point to a directory on the filesystem, may only contain SQL migrations and are only scanned recursively down non-hidden directories.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_LOCATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_LOCATIONS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`db/migration`

a|icon:lock[title=Fixed at build time] [[quarkus-flyway_quarkus-flyway-callbacks]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-callbacks[`quarkus.flyway.callbacks`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.callbacks+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".callbacks`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".callbacks+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Comma-separated list of fully qualified class names of Callback implementations to use to hook into the Flyway lifecycle. The `org.flywaydb.core.api.callback.Callback` subclass must have a no-args constructor and must not be abstract. These classes must also not have any fields that hold state (unless that state is initialized in the constructor).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CALLBACKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CALLBACKS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-flyway_quarkus-flyway-active]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-active[`quarkus.flyway.active`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.active+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".active`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".active+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Flag to activate/deactivate Flyway for a specific datasource at runtime.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_ACTIVE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`'true' if the datasource is active; 'false' otherwise`

a| [[quarkus-flyway_quarkus-flyway-connect-retries]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-connect-retries[`quarkus.flyway.connect-retries`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.connect-retries+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".connect-retries`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".connect-retries+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The maximum number of retries when attempting to connect to the database.

After each failed attempt, Flyway will wait up to the configured `connect-retries-interval` duration before attempting to connect again, up to the maximum number of times specified by connectRetries.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CONNECT_RETRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CONNECT_RETRIES+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-flyway_quarkus-flyway-connect-retries-interval]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-connect-retries-interval[`quarkus.flyway.connect-retries-interval`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.connect-retries-interval+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".connect-retries-interval`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".connect-retries-interval+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The maximum time between retries when attempting to connect to the database.

This will cap the interval between connect retries to the value provided.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CONNECT_RETRIES_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CONNECT_RETRIES_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-flyway_quarkus-flyway[icon:question-circle[title=More information about the Duration format]]
|`120 seconds`

a| [[quarkus-flyway_quarkus-flyway-default-schema]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-default-schema[`quarkus.flyway.default-schema`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.default-schema+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".default-schema`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".default-schema+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the default schema managed by Flyway. This schema name is case-sensitive. If not specified, but _schemas_ is, Flyway uses the first schema in that list. If that is also not specified, Flyway uses the default schema for the database connection.

Consequences:

 - This schema will be the one containing the schema history table.
 - This schema will be the default for the database connection (provided the database supports this concept).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_DEFAULT_SCHEMA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_DEFAULT_SCHEMA+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-jdbc-url]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-jdbc-url[`quarkus.flyway.jdbc-url`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.jdbc-url+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".jdbc-url`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".jdbc-url+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The JDBC URL that Flyway uses to connect to the database. Falls back to the datasource URL if not specified.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_JDBC_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_JDBC_URL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-username]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-username[`quarkus.flyway.username`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.username+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".username`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".username+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The username that Flyway uses to connect to the database. If no specific JDBC URL is configured, falls back to the datasource username if not specified.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-password]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-password[`quarkus.flyway.password`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.password+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".password`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".password+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The password that Flyway uses to connect to the database. If no specific JDBC URL is configured, falls back to the datasource password if not specified.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-schemas]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-schemas[`quarkus.flyway.schemas`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.schemas+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".schemas`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".schemas+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Comma-separated case-sensitive list of schemas managed by Flyway. The first schema in the list will be automatically set as the default one during the migration. It will also be the one containing the schema history table.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-flyway_quarkus-flyway-table]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-table[`quarkus.flyway.table`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.table+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".table`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".table+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The name of Flyway's schema history table. By default (single-schema mode), the schema history table is placed in the default schema for the connection provided by the datasource. When the flyway.schemas property is set (multi-schema mode), the schema history table is placed in the first schema of the list.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_TABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_TABLE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-sql-migration-prefix]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-sql-migration-prefix[`quarkus.flyway.sql-migration-prefix`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.sql-migration-prefix+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".sql-migration-prefix`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".sql-migration-prefix+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The file name prefix for versioned SQL migrations. Versioned SQL migrations have the following file name structure: prefixVERSIONseparatorDESCRIPTIONsuffix , which using the defaults translates to V1.1__My_description.sql


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_SQL_MIGRATION_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_SQL_MIGRATION_PREFIX+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-repeatable-sql-migration-prefix]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-repeatable-sql-migration-prefix[`quarkus.flyway.repeatable-sql-migration-prefix`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.repeatable-sql-migration-prefix+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".repeatable-sql-migration-prefix`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".repeatable-sql-migration-prefix+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The file name prefix for repeatable SQL migrations. Repeatable SQL migrations have the following file name structure: prefixSeparatorDESCRIPTIONsuffix , which using the defaults translates to R__My_description.sql


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_REPEATABLE_SQL_MIGRATION_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_REPEATABLE_SQL_MIGRATION_PREFIX+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-clean-at-start]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-clean-at-start[`quarkus.flyway.clean-at-start`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.clean-at-start+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".clean-at-start`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".clean-at-start+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
true to execute Flyway clean command automatically when the application starts, false otherwise.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CLEAN_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CLEAN_AT_START+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-clean-disabled]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-clean-disabled[`quarkus.flyway.clean-disabled`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.clean-disabled+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".clean-disabled`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".clean-disabled+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
true to prevent Flyway clean operations, false otherwise.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CLEAN_DISABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CLEAN_DISABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-migrate-at-start]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-migrate-at-start[`quarkus.flyway.migrate-at-start`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.migrate-at-start+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".migrate-at-start`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".migrate-at-start+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
true to execute Flyway automatically when the application starts, false otherwise.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_MIGRATE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_MIGRATE_AT_START+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-repair-at-start]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-repair-at-start[`quarkus.flyway.repair-at-start`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.repair-at-start+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".repair-at-start`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".repair-at-start+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
true to execute a Flyway repair command when the application starts, false otherwise.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_REPAIR_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_REPAIR_AT_START+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-validate-at-start]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-validate-at-start[`quarkus.flyway.validate-at-start`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.validate-at-start+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".validate-at-start`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".validate-at-start+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
true to execute a Flyway validate command when the application starts, false otherwise.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_VALIDATE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_VALIDATE_AT_START+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-validate-at-start-clean-on-validation-error]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-validate-at-start-clean-on-validation-error[`quarkus.flyway.validate-at-start.clean-on-validation-error`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.validate-at-start.clean-on-validation-error+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".validate-at-start.clean-on-validation-error`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".validate-at-start.clean-on-validation-error+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
true to automatically execute a Flyway clean command when a validation error occurs at start, false otherwise.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_VALIDATE_AT_START_CLEAN_ON_VALIDATION_ERROR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_VALIDATE_AT_START_CLEAN_ON_VALIDATION_ERROR+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-baseline-on-migrate]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-baseline-on-migrate[`quarkus.flyway.baseline-on-migrate`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.baseline-on-migrate+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".baseline-on-migrate`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".baseline-on-migrate+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
true to execute Flyway baseline before migrations This flag is ignored if the flyway_schema_history table exists in the current schema or if the current schema is empty. Note that this will not automatically call migrate, you must either enable baselineAtStart or programmatically call flyway.migrate().


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_BASELINE_ON_MIGRATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_BASELINE_ON_MIGRATE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-baseline-at-start]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-baseline-at-start[`quarkus.flyway.baseline-at-start`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.baseline-at-start+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".baseline-at-start`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".baseline-at-start+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
true to execute Flyway baseline automatically when the application starts. This flag is ignored if the flyway_schema_history table exists in the current schema. This will work even if the current schema is empty.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_BASELINE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_BASELINE_AT_START+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-baseline-version]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-baseline-version[`quarkus.flyway.baseline-version`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.baseline-version+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".baseline-version`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".baseline-version+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The initial baseline version.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_BASELINE_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_BASELINE_VERSION+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-baseline-description]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-baseline-description[`quarkus.flyway.baseline-description`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.baseline-description+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".baseline-description`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".baseline-description+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The description to tag an existing schema with when executing baseline.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_BASELINE_DESCRIPTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_BASELINE_DESCRIPTION+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-validate-on-migrate]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-validate-on-migrate[`quarkus.flyway.validate-on-migrate`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.validate-on-migrate+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".validate-on-migrate`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".validate-on-migrate+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether to automatically call validate when performing a migration.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_VALIDATE_ON_MIGRATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_VALIDATE_ON_MIGRATE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-flyway_quarkus-flyway-out-of-order]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-out-of-order[`quarkus.flyway.out-of-order`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.out-of-order+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".out-of-order`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".out-of-order+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Allows migrations to be run "out of order".


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_OUT_OF_ORDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_OUT_OF_ORDER+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-ignore-missing-migrations]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-ignore-missing-migrations[`quarkus.flyway.ignore-missing-migrations`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.ignore-missing-migrations+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".ignore-missing-migrations`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".ignore-missing-migrations+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Ignore missing migrations when reading the history table. When set to true migrations from older versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_IGNORE_MISSING_MIGRATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_IGNORE_MISSING_MIGRATIONS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-ignore-future-migrations]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-ignore-future-migrations[`quarkus.flyway.ignore-future-migrations`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.ignore-future-migrations+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".ignore-future-migrations`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".ignore-future-migrations+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Ignore future migrations when reading the history table. When set to true migrations from newer versions present in the history table but absent in the configured locations will be ignored (and logged as a warning), when false (the default) the validation step will fail.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_IGNORE_FUTURE_MIGRATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_IGNORE_FUTURE_MIGRATIONS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-placeholders-placeholder-key]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-placeholders-placeholder-key[`quarkus.flyway.placeholders."placeholder-key"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.placeholders."placeholder-key"+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".placeholders."placeholder-key"`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".placeholders."placeholder-key"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Sets the placeholders to replace in SQL migration scripts.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_PLACEHOLDERS__PLACEHOLDER_KEY_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_PLACEHOLDERS__PLACEHOLDER_KEY_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-flyway_quarkus-flyway-create-schemas]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-create-schemas[`quarkus.flyway.create-schemas`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.create-schemas+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".create-schemas`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".create-schemas+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether Flyway should attempt to create the schemas specified in the schemas property


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CREATE_SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CREATE_SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-flyway_quarkus-flyway-placeholder-prefix]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-placeholder-prefix[`quarkus.flyway.placeholder-prefix`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.placeholder-prefix+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".placeholder-prefix`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".placeholder-prefix+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Prefix of every placeholder (default: $++{++ )


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_PLACEHOLDER_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_PLACEHOLDER_PREFIX+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-placeholder-suffix]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-placeholder-suffix[`quarkus.flyway.placeholder-suffix`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.placeholder-suffix+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".placeholder-suffix`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".placeholder-suffix+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Suffix of every placeholder (default: ++}++ )


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_PLACEHOLDER_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_PLACEHOLDER_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-init-sql]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-init-sql[`quarkus.flyway.init-sql`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.init-sql+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".init-sql`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".init-sql+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The SQL statements to run to initialize a new database connection immediately after opening it.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_INIT_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_INIT_SQL+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-flyway_quarkus-flyway-validate-migration-naming]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-validate-migration-naming[`quarkus.flyway.validate-migration-naming`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.validate-migration-naming+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".validate-migration-naming`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".validate-migration-naming+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Whether to validate migrations and callbacks whose scripts do not obey the correct naming convention. A failure can be useful to check that errors such as case sensitivity in migration prefixes have been corrected.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_VALIDATE_MIGRATION_NAMING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_VALIDATE_MIGRATION_NAMING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-flyway_quarkus-flyway-ignore-migration-patterns]] [.property-path]##link:#quarkus-flyway_quarkus-flyway-ignore-migration-patterns[`quarkus.flyway.ignore-migration-patterns`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway.ignore-migration-patterns+++[]
endif::add-copy-button-to-config-props[]


`quarkus.flyway."datasource-name".ignore-migration-patterns`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.flyway."datasource-name".ignore-migration-patterns+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Ignore migrations during validate and repair according to a given list of patterns (see https://flywaydb.org/documentation/configuration/parameters/ignoreMigrationPatterns for more information). When this configuration is set, the ignoreFutureMigrations and ignoreMissingMigrations settings are ignored. Patterns are comma separated.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_IGNORE_MIGRATION_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_IGNORE_MIGRATION_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|


|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-flyway_quarkus-flyway]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
